--- a/etiquetas_texto.html
+++ b/etiquetas_texto.html
@@ -22,3 +22,31 @@ propósito.
 <h5>Yo soy un h5</h5>
 <h6>Yo soy un h6</h6>
 </div
+
+<hr>
+<div>
+<h2>Usando negritas, cursivas y subrayados</h2>
+<p>En HTML es posible agregar <b>negritas</b>,
+<i>cursivas</i> y <ins>subrayados </ins>de una forma muy sencilla. De
+hecho, puedes combinar estas <b><i>etiquetas</i></b> para conseguir los
+resultados <ins><i>deseados</ins></i>.
+</p>
+</div>
+<hr>
+<div>
+<h2>Citas</h2>
+<p>HTML tambien permite insertar citas mediante el uso de la
+etiqueta <b>blockquote</b>. Esta da un resultado similar al párrafo,
+inserta espacio antes y después de un bloque de código, pero también
+inserta un margen a la izquierda y a la derecha. El resultado visual
+tiene la finalidad de manejar el texto como los libros lo hacen con una
+frase que ha dicho alguien más, es decir, manejar el texto como una
+fuente de información externa como se muestra en el siguiente
+ejemplo:
+</p>
+<blockquote>Los débiles no luchan. Los más fuertes quizás
+luchen una hora. Los que aún son más fuertes, luchan unos años. Pero los
+más fuertes de todos, luchan toda su vida, éstos son los
+indispensables.</blockquote>
+<cite>Bertolt Brecht</cite>
+</div>
