--- a/etiquetas_texto.html
+++ b/etiquetas_texto.html
@@ -50,3 +50,6 @@ más fuertes de todos, luchan toda su vida, éstos son los
 indispensables.</blockquote>
 <cite>Bertolt Brecht</cite>
 </div>
+
+<!-- RESPUESTA A PREGUNTA  7 ( EJERCICIO 3)--
+  No se presentan cambios en la web, el aporte de las etiquetas no altera el contenido de la web>>
