Respuesta Ejercicio final

--- a/semantica.html
+++ b/semantica.html
@@ -72,3 +72,8 @@ de estructura semantica provistas por HTML5. </p>
 </footer>
 </body>
 </html>
+
+<!-- RESPUESTA A EJERCICIO FINAL
+aunque visualmente la página puede no diferir mucho de un HTML sin semántica, el resultado estructural 
+y de significado sí coincide con el esquema de la introducción, porque se logra la misma división en secciones
+ con roles bien definidos. -->
